apps/kiwix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwix
  namespace: kiwix
  labels:
    app.kubernetes.io/name: kiwix
    app.kubernetes.io/part-of: kiwix
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kiwix
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
