apps/kiwix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiwix
  namespace: kiwix
  labels:
    app.kubernetes.io/name: kiwix
    app.kubernetes.io/part-of: kiwix
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kiwix-security-headers@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Kiwix
    gethomepage.dev/icon: kiwix.svg
    gethomepage.dev/description: Wiki server - Includes Wikipedia
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - wiki.omv.mousses.xyz
      secretName: kiwix-tls
  rules:
    - host: wiki.omv.mousses.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiwix
                port:
                  name: http
